Atualiza index.html

--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
   <link rel="prefetch" href="index.html" as="document">
   <link rel="preload" href="build/css/main.css" as="style">
   <link rel="stylesheet" href="build/css/main.css">
+  <!-- Javascript -->
+  <script defer src="build/js/script.js"></script>
 </head>
 
 <body>
-  <picture>
-    <source srcset="build/img/natureza.avif" type="image/avif">
-    <source srcset="build/img/natureza.webp" type="image/webp">
-    <img loading="lazy" width="320" height="479" src="build/img/natureza.jpg" alt="Natureza">
-  </picture>
+  <header class="container">
+    <h1 class="heading-primary">Logo</h1>
+  </header>
 
-  <script src="build/js/main.js"></script>
+  <main>
+    <section class="container">
+      <h2 class="heading-secondary">Título 2</h2>
+      <h3 class="heading-tertiary">Titulo 3</h3>
+    </section>
+  </main>
+
 </body>
 
 </html>
